# pink-noise

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-generate-pink-noise/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-generate-pink-noise/checklists/: guide-usability.md  requirements.md
specs/001-generate-pink-noise/contracts/: cli.md  custom-layout.schema.json  validation-data.schema.json
src/pink_noise/: __init__.py  app.py  cli.py
src/pink_noise/audio/: __init__.py  generator.py  validation.py  wav.py
src/pink_noise/domain/: __init__.py  layouts.py  models.py  profiles.py
src/pink_noise/output/: __init__.py  companion.py  guide.py  reports.py
tests/contract/: test_cli_contract.py  test_custom_layout_schema.py  test_validation_schema.py
tests/integration/: test_generate_reference_set.py
tests/unit/: test_app.py
tests/unit/audio/: test_generator.py  test_validation.py  test_wav.py
tests/unit/domain/: test_layouts.py  test_models.py  test_profiles.py
tests/unit/output/: test_companion.py  test_guide.py  test_reports.py
