[build-system]
requires = ["hatchling>=1.30.1,<2"]
build-backend = "hatchling.build"

[project]
name = "pink-noise"
version = "0.1.0"
description = "Calibration-grade pink-noise reference track generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.4.6,<2.5"]

[project.optional-dependencies]
test = ["pytest>=9.1,<10", "jsonschema>=4.26,<5", "build>=1.5,<2"]

[project.scripts]
pink-noise = "pink_noise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pink_noise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]
